tests/errors/param-width.expect
---CODE---
1
---STDERR---
error: source and destination widths must match
  ┌─ tests/errors/param-width.fil:5:16
  │
5 │     a0 := A<G>(a, a);
  │                ^ source has width #W
  │
  ┌─ ./primitives/./comb.fil:9:13
  │
9 │     @[G, L] left: #IN_WIDTH,
  │             ---- destination has width 32

error: source and destination widths must match
   ┌─ tests/errors/param-width.fil:5:19
   │
 5 │     a0 := A<G>(a, a);
   │                   ^ source has width #W
   │
   ┌─ ./primitives/./comb.fil:10:13
   │
10 │     @[G, L] right: #IN_WIDTH,
   │             ----- destination has width 32

Compilation failed with 2 errors.
Run with --show-models to generate assignments for failing constraints.
